// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import visitors exports/exportAllFrom.js 1`] = `Array []`;

exports[`import visitors exports/exportDefault.js 1`] = `Array []`;

exports[`import visitors exports/exportDefaultFuncAlias.js 1`] = `Array []`;

exports[`import visitors exports/exportDefaultValueAlias.js 1`] = `Array []`;

exports[`import visitors exports/exportFunc.js 1`] = `Array []`;

exports[`import visitors exports/exportFuncAlias.js 1`] = `Array []`;

exports[`import visitors exports/exportNamed.js 1`] = `Array []`;

exports[`import visitors exports/exportNamedFrom.js 1`] = `
Array [
  Object {
    "alias": "a",
    "name": "a",
    "source": "./exportNamed",
  },
]
`;

exports[`import visitors exports/noExports.js 1`] = `Array []`;

exports[`import visitors imports/dynamicImport-asyncawait.js 1`] = `
Array [
  Object {
    "alias": "dynamicImport",
    "name": "dynamicImport",
    "source": "./b",
  },
]
`;

exports[`import visitors imports/dynamicImport-then.js 1`] = `Array []`;

exports[`import visitors imports/importAlias.js 1`] = `
Array [
  Object {
    "alias": "b",
    "name": "a",
    "source": "./base",
  },
]
`;

exports[`import visitors imports/importAll.js 1`] = `
Array [
  Object {
    "alias": "base",
    "name": "*",
    "source": "./base",
  },
]
`;

exports[`import visitors imports/importCss.js 1`] = `
Array [
  Object {
    "alias": "styles",
    "name": "default",
    "source": "../nonjs/style.css",
  },
]
`;

exports[`import visitors imports/importDefault.js 1`] = `
Array [
  Object {
    "alias": "base",
    "name": "default",
    "source": "./base",
  },
]
`;

exports[`import visitors imports/importNamed.js 1`] = `
Array [
  Object {
    "alias": "a",
    "name": "a",
    "source": "./base",
  },
]
`;

exports[`import visitors imports/noImports.js 1`] = `Array []`;
